syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "AccommodationApplication.Accommodation.Support.Grpc.Protos";
import "Accommodation/Support/Grpc/Protos/model.proto";

service GuestNotificationGrpcService {
  rpc communicate (MessageProto) returns (MessageResponseProto);
}