syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "AccommodationApplication.Accommodation.Support.Grpc.Protos";


message MessageProto {
  string email = 1;
  string startDate = 2;
  string endDate = 3;
  string accommodation = 4;
  string operation = 5;
}

message MessageResponseProto {
  string status = 1;
}


